--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,29 @@
 version: 2.1
 
-orbs:
-  welcome: circleci/welcome-orb@0.3.1
-
-workflows:
-  Welcome:
-    jobs:
-      - welcome/run
+jobs:
+  build:
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-28
+    environment:
+      JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
+      - run:
+          name: Accept Terms
+          command: yes | sdkmanager --licenses || exit 0
+      - run:
+          name: Update sdk
+          command: yes | sdkmanager --update || exit 0
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
+      - run:
+          name: Assemble app
+          command: ./gradlew assembleDebug
