--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,5 @@ cmake-build-*/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
 # End of https://www.gitignore.io/api/kotlin,android,intellij,androidstudio
+
+!/gradle/wrapper/gradle-wrapper.jar
