--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,3 +64,12 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+
+workflows:
+  version: 2
+  workflow:
+    jobs:
+      - build
+      - ui_test:
+          requires:
+            - build
