--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,49 +27,60 @@ jobs:
       - run:
           name: Assemble app
           command: ./gradlew assembleDebug
+#  ui_test:
+#    working_directory: ~/code
+#    docker:
+#      - image: circleci/android:api-28
+#    environment:
+#      JVM_OPTS: -Xmx3200m
+#    steps:
+#      - checkout
+#      - restore_cache:
+#          key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
+#      - run:
+#          name: Accept Terms
+#          command: yes | sdkmanager --licenses || exit 0
+#      - run:
+#          name: Update sdk
+#          command: yes | sdkmanager --update || exit 0
+#      - run:
+#          name: Setup Emulator
+#          command: sdkmanager "system-images;android-28;default;x86" && echo "no" | avdmanager create avd -n test -k "system-images;android-28;default;x86"
+#      - run:
+#          name: Launch Emulator
+#          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
+#          background: true
+#      - run:
+#          name: Wait Emulator
+#          command: |
+#            circle-android wait-for-boot
+#            sleep 30
+#            adb shell input keyevent 82
+#      - run:
+#          name: Run EspressoTests
+#          command: ./gradlew connectedDebugAndroidTest
+#      - store_artifacts:
+#          path: app/build/reports
+#          destination: reports
+#      - store_test_results:
+#          path: app/build/test-results
   ui_test:
-    working_directory: ~/code
-    docker:
-      - image: circleci/android:api-28
-    environment:
-      JVM_OPTS: -Xmx3200m
-    steps:
-      - checkout
-      - restore_cache:
-          key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
-      - run:
-          name: Accept Terms
-          command: yes | sdkmanager --licenses || exit 0
-      - run:
-          name: Update sdk
-          command: yes | sdkmanager --update || exit 0
-      - run:
-          name: Setup Emulator
-          command: sdkmanager "system-images;android-28;default;x86" && echo "no" | avdmanager create avd -n test -k "system-images;android-28;default;x86"
-      - run:
-          name: Launch Emulator
-          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
+    pre:
+      - emulator -avd circleci-android28 -no-audio -no-window:
           background: true
-      - run:
-          name: Wait Emulator
-          command: |
-            circle-android wait-for-boot
-            sleep 30
-            adb shell input keyevent 82
-      - run:
-          name: Run EspressoTests
-          command: ./gradlew connectedDebugAndroidTest
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
-      - store_test_results:
-          path: app/build/test-results
+          parallel: true
+      - circle-android wait-for-boot
+      - sleep 30
+      - adb shell input keyevent 82
+    override:
+      - ./gradlew connectedDebugAndroidTest
 
 workflows:
   version: 2
   workflow:
     jobs:
-      - build
-      - ui_test:
-          requires:
-            - build
+      - ui_test
+#      - build
+#      - ui_test:
+#          requires:
+#            - build
