--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,9 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
       - run:
+          name: List AVDs
+          command: emulator -list-avds
+      - run:
           name: Launch emulator
           command: emulator -avd circleci-android28 -no-window
           background: true
