--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,43 +21,6 @@ jobs:
       - run:
           name: Assemble app
           command: ./gradlew assembleDebug
-#  ui_test:
-#    working_directory: ~/code
-#    docker:
-#      - image: circleci/android:api-28
-#    environment:
-#      JVM_OPTS: -Xmx3200m
-#    steps:
-#      - checkout
-#      - restore_cache:
-#          key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
-#      - run:
-#          name: Accept Terms
-#          command: yes | sdkmanager --licenses || exit 0
-#      - run:
-#          name: Update sdk
-#          command: yes | sdkmanager --update || exit 0
-#      - run:
-#          name: Setup Emulator
-#          command: sdkmanager "system-images;android-28;default;x86" && echo "no" | avdmanager create avd -n test -k "system-images;android-28;default;x86"
-#      - run:
-#          name: Launch Emulator
-#          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
-#          background: true
-#      - run:
-#          name: Wait Emulator
-#          command: |
-#            circle-android wait-for-boot
-#            sleep 30
-#            adb shell input keyevent 82
-#      - run:
-#          name: Run EspressoTests
-#          command: ./gradlew connectedDebugAndroidTest
-#      - store_artifacts:
-#          path: app/build/reports
-#          destination: reports
-#      - store_test_results:
-#          path: app/build/test-results
   ui_test:
     working_directory: ~/code
     docker:
@@ -69,22 +32,32 @@ jobs:
       - restore_cache:
           key: jars-{{ checksum "build.gradle.kts" }}-{{ checksum "app/build.gradle.kts" }}
       - run:
-          name: List AVDs
-          command: emulator -list-avds
+          name: Accept Terms
+          command: yes | sdkmanager --licenses || exit 0
       - run:
-          name: Launch emulator
-          command: emulator -avd circleci-android28 -no-window
+          name: Update sdk
+          command: yes | sdkmanager --update || exit 0
+      - run:
+          name: Setup Emulator
+          command: sdkmanager "system-images;android-28;default;x86" && echo "no" | avdmanager create avd -n test -k "system-images;android-28;default;x86"
+      - run:
+          name: Launch Emulator
+          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-x86 -avd test -no-boot-anim -no-window -accel auto -verbose
           background: true
-          parallel: true
       - run:
-          name: Wait for emulator
+          name: Wait Emulator
           command: |
-            circleci-android wait-for-boot
+            circle-android wait-for-boot
             sleep 30
             adb shell input keyevent 82
       - run:
-          name: Run tests
+          name: Run EspressoTests
           command: ./gradlew connectedDebugAndroidTest
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
 
 workflows:
   version: 2
