--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
   ui_test:
     working_directory: ~/code
     docker:
-      - image: circleci/android:api-28
+      - image: circleci/android@sha256:5cdc8626cc6f13efe5ed982cdcdb432b0472f8740fed8743a6461e025ad6cdfc
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
